# urirun-connector-kvm

./: .gitignore  CHANGELOG.md  DESKTOPENV.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  local.dev.txt  planfile.yaml  pyproject.toml  vguard.py
.github/workflows/: ci.yml  integration-urirun-llm.yml
.planfile/: config.yaml
ci/: contract_ci.sh  contract_codegen.py  contract_shape_lint.py  cross_process_roundtrip.py
code2llm_output/: README.md  analysis.toon.yaml  context.md
code2llm_output/analysis.toon.yaml/: README.md  analysis.toon.yaml  context.md
computer-use-preview/: README.md  agent.py  main.py  requirements.txt  test_agent.py  test_kvm_computer.py  test_main.py
computer-use-preview/computers/: __init__.py
docs/: ARCHITECTURE-cross-platform-backends.md  PERFORMANCE-REFACTOR.md  autonomous-kvm-agent.md  control-router-findings.md  lenovo-control-runbook.md  operational-layers-priorities.md  reversibility-contract.md  surface-architecture.md
examples/: README.md  calibrate_abs.py  contract_scenarios.py  contract_scenarios.sh  quickstart.sh
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: bench_locate.py  ci_urirun_llm_smoke.py  redeploy_node.sh
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_contract_composition.py  test_contract_conformance.py  test_contract_scenarios.py  test_dep_health.py  test_kvm.py  test_readiness.py  test_xlang_polyglot.py
urirun_connector_kvm/: __init__.py  _backends_surface.py  _backends_uinput.py  _cdp_impl.py  backends.py  capture_worker.py  cdp.py  connector.manifest.json  contracts.py  control.py  core.py  environment.py  launch_backends.py  readiness.py  strategies.py  surface.py  vnc.py
xlang/: README.md  conformance_driver.py  driver.sh  emit_contracts.py  emit_jsonschema.py  emit_typescript.py  jsonschema_proof.py  jsonschema_proof.sh  peer.go  peer.mjs  peer.py  run.sh  transport_swap.py  transport_swap.sh  typescript_proof.sh
xlang/rust/: Cargo.toml  local.dev.txt
xlang/rust/src/: main.rs
xlang/ts/: check_bad.ts  check_ok.ts  contracts.d.ts  tsconfig.json
(+3 files in other folders)
