[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-kvm"
version = "0.3.0"
description = "Cross-platform KVM connector (screen capture + keyboard/mouse) for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]
# Helpful backend libraries — install the extra(s) your platform needs. The
# connector degrades gracefully to whatever is present (see doctor/query/report).
capture = ["mss>=9.0", "Pillow>=10.0"]            # X11/Windows/macOS capture + downscale
portal = ["PyGObject>=3.42", "dbus-python>=1.3"]  # Wayland XDG-portal capture (Linux)
input = ["pynput>=1.7"]                           # cross-platform keyboard/mouse fallback
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]     # click-text / text location (tesseract CLI)
easyocr = ["easyocr>=1.7", "Pillow>=10.0"]        # stronger UI/low-contrast OCR locate (pulls torch)
windows = ["pygetwindow>=0.0.9"]                  # window focus on Windows/macOS
full = ["mss>=9.0", "Pillow>=10.0", "pynput>=1.7", "pytesseract>=0.3.10"]

[project.scripts]
urirun-kvm = "urirun_connector_kvm.core:main"

[project.entry-points."urirun.bindings"]
kvm = "urirun_connector_kvm.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_kvm*"]

[tool.setuptools.package-data]
urirun_connector_kvm = ["connector.manifest.json"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
norecursedirs = ["computer-use-preview", "venv", ".venv", "build", "dist"]
